doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3
-d
D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\Model.java
<---- end of javadoc command ---->
Loading source file D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\Model.java...
Constructing Javadoc information...
D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\Model.java:35: error: method pay() is already defined in class Model
    public double pay(){
                  ^
Standard Doclet version 1.8.0_25
Building tree for all the packages and classes...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\Model.html...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\package-frame.html...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\package-summary.html...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\allclasses-frame.html...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\allclasses-noframe.html...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\index.html...
Generating D:\School\Term 01\COMP 1409\Assignment 3\JasonChanAssign3\doc\stylesheet.css...
1 warning
